--- a/client/src/components/sections/styles/Skills.scss
+++ b/client/src/components/sections/styles/Skills.scss
@@ -1,7 +1,6 @@
 .skillSection {
     display: flex;
     overflow: hidden;
-    width: 100vw;
     min-height: 800px;
     align-items: center;
 }
